# ArenaShooter

./: CMakeLists.txt
assets/shaders/: default.frag  default.vert
include/: application.hpp  game.hpp
include/gameplay/: camera.hpp  player.hpp
include/graphics/: light.hpp  material.hpp  mesh.hpp  shader.hpp  vertex.hpp
include/graphics/shapes/: cube.hpp
include/physics/: collision.hpp  shapes.hpp
include/platform/: window.hpp
include/scene/: gameobject.hpp  model.hpp  transform.hpp  uuid.hpp
scripts/: compile-windows.sh  distribution.sh  run.sh
src/: application.cpp  game.cpp  main.cpp
src/gameplay/: camera.cpp  player.cpp
src/graphics/: mesh.cpp  shader.cpp
src/physics/: collision.cpp
src/platform/: error_handling.cpp  system_info.cpp  window.cpp
src/scene/: gameobject.cpp
